--- a/Veem/Payment/view/adminhtml/layout/sales_order_create_index.xml
+++ b/Veem/Payment/view/adminhtml/layout/sales_order_create_index.xml
@@ -2,9 +2,8 @@
     <body>
         <referenceBlock name="order_create_billing_form">
             <action method="setMethodFormTemplate">
-                <!-- your method code and template -->
                 <argument name="method" xsi:type="string">veem</argument>
-                <argument name="template" xsi:type="string">Veem_Payment::form/email.phtml</argument>
+                <argument name="template" xsi:type="string">Veem_Payment::form/form.phtml</argument>
             </action>
         </referenceBlock>
     </body>
